add support for burst-mode photogtaphy

--- a/EmergencyRecorder/app/src/main/res/values/strings_naming.xml
+++ b/EmergencyRecorder/app/src/main/res/values/strings_naming.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="photo_name">emergency_photo_%s.jpg</string>
+    <string name="photo_filename">emergency_photo_%s.jpg</string>
     <string name="photo_title">emergency photo %s</string>
     <string name="photo_description">Photo taken by the Emergency Recorder, %s.</string>
+
+    <string name="video_title">emergency video %s</string>
+    <string name="video_description">Video taken by the Emergency Recorder, %s. Contains %d frames. Duration: %d ms.</string>
 
 </resources>
