--- a/EmergencyRecorder/recorder.app/src/main/res/layout/activity_rules.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/activity_rules.xml
@@ -14,4 +14,14 @@
         tools:listitem="@layout/entry_rule">
     </androidx.recyclerview.widget.RecyclerView>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_add_black_24dp"
+        android:tint="@android:color/white"
+        />
+
 </FrameLayout>
