--- a/EmergencyRecorder/recorder.app/src/main/res/layout/entry_rule.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/entry_rule.xml
@@ -1,62 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/card_padding">
 
-    <TextView
-        android:id="@+id/text_number"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="number"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@id/text_behaviour"
-        />
+        app:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/text_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_number"
-        android:textSize="14sp"
-        android:text="name"
-        android:textStyle="bold"
-        android:textColor="@android:color/darker_gray"
-        />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/card_padding">
 
-    <TextView
-        android:id="@+id/text_behaviour"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="behaviour"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_toStartOf="@id/btn_edit"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="@dimen/card_padding"
-        />
+            <TextView
+                android:id="@+id/text_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="number"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                />
 
-    <ImageView
-        android:id="@+id/btn_edit"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/ic_edit_black_24dp"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@id/btn_delete"
-        android:layout_marginEnd="@dimen/card_padding"
-        />
+            <TextView
+                android:id="@+id/text_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/text_number"
+                android:layout_alignBaseline="@id/text_number"
+                android:textSize="14sp"
+                android:text="name"
+                android:textStyle="bold"
+                android:textColor="@android:color/darker_gray"
+                android:layout_marginStart="@dimen/card_padding"
+                />
 
-    <ImageView
-        android:id="@+id/btn_delete"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/ic_delete_forever_black_24dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        />
+            <TextView
+                android:id="@+id/text_behaviour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="behaviour"
+                android:textSize="18sp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/text_number"
+                />
 
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/icon_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_more_vert_black_24dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="@dimen/card_padding"
+                />
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
+</FrameLayout>
