--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings_naming.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings_naming.xml
@@ -16,4 +16,8 @@
     <string name="audio_title">emergency audio %s</string>
     <string name="audio_description">Audio recorded by the Emergency Recorder, %s. Duration: %d ms.</string>
 
+    <string name="location_description">Lat: %1$.5f, Lng: %2$.5f</string>
+    <string name="geocode_description">%s</string>
+    <string name="w3w_description">///%s</string>
+
 </resources>
