--- a/EmergencyRecorder/recorder.app/src/main/res/layout/overlay_launcher.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/overlay_launcher.xml
@@ -8,19 +8,22 @@
     tools:context=".ui.overlay.LauncherOverlay"
     android:background="@drawable/background_launcher_left"
     android:layout_gravity="left|center_vertical"
-    android:padding="5dp"
     tools:ignore="RtlHardcoded"
     android:alpha="0.5"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginRight="10dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    android:paddingRight="5dp"
+    android:layout_marginRight="20dp"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+    android:translationX="-24dp">
 
     <ImageView
         android:id="@+id/icon_launch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_videocam_black_24dp"
