--- a/EmergencyRecorder/recorder.app/src/main/res/layout/entry_log.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/entry_log.xml
@@ -16,57 +16,67 @@
             android:padding="@dimen/card_padding">
 
             <ImageView
-                android:id="@+id/icon_rule"
+                android:id="@+id/icon_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_settings_black_24dp"
+                android:src="@drawable/ic_call_black_24dp"
                 android:layout_marginEnd="@dimen/card_padding"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                />
-
-            <TextView
-                android:id="@+id/text_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="number"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_toEndOf="@id/icon_rule"
                 android:layout_alignParentTop="true"
                 />
 
             <TextView
-                android:id="@+id/text_name"
+                android:id="@+id/text_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/text_number"
-                android:layout_alignBaseline="@id/text_number"
-                android:textSize="14sp"
-                android:text="name"
+                android:text="event"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="@android:color/darker_gray"
-                android:layout_marginStart="@dimen/card_padding"
+                android:layout_toEndOf="@id/icon_event"
+                android:layout_alignParentTop="true"
                 />
 
             <TextView
-                android:id="@+id/text_behaviour"
+                android:id="@+id/text_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="behaviour"
+                android:text="detail"
                 android:textSize="18sp"
-                android:layout_toEndOf="@id/icon_rule"
-                android:layout_below="@id/text_number"
+                android:layout_toEndOf="@id/icon_event"
+                android:layout_below="@id/text_event"
                 />
 
             <ImageView
-                android:id="@+id/icon_menu"
+                android:id="@+id/icon_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_more_vert_black_24dp"
-                android:layout_alignParentTop="true"
+                android:src="@drawable/ic_share_black_24dp"
+                android:layout_below="@id/text_date"
                 android:layout_alignParentEnd="true"
+                android:layout_marginTop="@dimen/card_padding"
+                />
+
+            <ImageView
+                android:id="@+id/icon_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_remove_red_eye_black_24dp"
+                android:layout_below="@id/text_date"
+                android:layout_toStartOf="@id/icon_share"
                 android:layout_marginEnd="@dimen/card_padding"
+                android:layout_marginTop="@dimen/card_padding"
+                />
+
+            <TextView
+                android:id="@+id/text_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:textSize="14sp"
+                android:text="time and date"
+                android:textStyle="bold"
+                android:textColor="@android:color/darker_gray"
                 />
 
         </RelativeLayout>
