--- a/EmergencyRecorder/recorder.app/src/main/res/values/colors.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/colors.xml
@@ -4,8 +4,9 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">@color/colorVideo</color>
 
-    <color name="colorWarning">#FFC107</color>
-    <color name="colorAOK">#4CAF50</color>
+    <color name="colorWarning">#E65100</color>
+    <color name="colorAOK">#00ACC1</color>
+
     <color name="colorVideo">#C43228</color>
     <color name="colorHybrid">#673AB7</color>
     <color name="colorPhoto">#2196F3</color>
