--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings_service.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings_service.xml
@@ -10,12 +10,12 @@
 
     <string name="toast_info_call_detected">Call detected: %s</string>
 
-    <string name="toast_warning_unable_to_create_record">Unable to create a new log entry.</string>
-    <string name="toast_warning_unable_to_insert_rule">Unable to add new rule to your set.</string>
-    <string name="toast_warning_unable_to_delete_rule">Unable to delete this rule.</string>
-    <string name="toast_warning_unable_to_update_rule">Unable to update this rule.</string>
+    <string name="toast_warning_unable_to_create_record">An unexpected error occurred attempting to create a new log entry.</string>
+    <string name="toast_warning_unable_to_insert_rule">An unexpected error occurred attempting to add new rule to your set.</string>
+    <string name="toast_warning_unable_to_delete_rule">An unexpected error occurred attempting to delete this rule.</string>
+    <string name="toast_warning_unable_to_update_rule">An unexpected error occurred attempting to update this rule.</string>
     <string name="toast_warning_rule_locked_cannot_delete">Cannot delete this rule, it is protected.</string>
-
+    <string name="toast_warning_unable_to_delete_entire_audit_log">An unexpected error occurred attempting to delete the audit log.</string>
     <string name="toast_warning_need_permissions_to_launch_bubblecam">Please grant all the permissions this app requires before launching the bubble camera.</string>
 
 </resources>
