--- a/EmergencyRecorder/recorder.app/src/main/res/layout/activity_config.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/activity_config.xml
@@ -112,6 +112,49 @@
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_margin"
+                app:cardUseCompatPadding="true">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/card_padding">
+
+                    <ImageView
+                        android:id="@+id/icon_warn_power"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:src="@drawable/ic_warning_black_24dp"
+                        android:layout_margin="@dimen/card_padding"
+                        />
+
+                    <TextView
+                        android:id="@+id/explanation_power"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@id/icon_warn_power"
+                        android:layout_marginTop="@dimen/card_padding"
+                        android:text="@string/explanation_power"
+                        />
+
+                    <Button
+                        android:id="@+id/btn_power"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/explanation_power"
+                        android:layout_toEndOf="@id/icon_warn_power"
+                        android:layout_marginTop="@dimen/card_padding"
+                        android:text="@string/btn_request_power"
+                        />
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
 
     </ScrollView>
