--- a/EmergencyRecorder/recorder.app/src/main/res/layout/activity_log.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/activity_log.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.RulesActivity"
-    android:padding="@dimen/activity_margin">
+    android:paddingStart="@dimen/activity_margin"
+    android:paddingEnd="@dimen/activity_margin">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_log"
