--- a/EmergencyRecorder/recorder.app/src/main/res/layout/entry_log.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/entry_log.xml
@@ -25,6 +25,16 @@
                 android:layout_alignParentTop="true"
                 />
 
+            <ImageView
+                android:id="@+id/image_preview"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_toEndOf="@id/icon_event"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="@dimen/card_padding"
+                android:src="@drawable/ic_image_black_24dp"
+                />
+
             <TextView
                 android:id="@+id/text_event"
                 android:layout_width="wrap_content"
@@ -32,7 +42,8 @@
                 android:text="event"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_toEndOf="@id/icon_event"
+                android:layout_toEndOf="@id/image_preview"
+                android:layout_toStartOf="@id/icon_menu"
                 android:layout_alignParentTop="true"
                 />
 
@@ -41,39 +52,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="detail"
-                android:textSize="18sp"
-                android:layout_toEndOf="@id/icon_event"
+                android:textSize="16sp"
+                android:layout_toEndOf="@id/image_preview"
+                android:layout_toStartOf="@id/icon_menu"
                 android:layout_below="@id/text_event"
                 />
 
             <ImageView
-                android:id="@+id/icon_share"
+                android:id="@+id/icon_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_share_black_24dp"
-                android:layout_below="@id/text_date"
+                android:src="@drawable/ic_more_vert_black_24dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="@dimen/card_padding"
-                />
-
-            <ImageView
-                android:id="@+id/icon_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_remove_red_eye_black_24dp"
-                android:layout_below="@id/text_date"
-                android:layout_toStartOf="@id/icon_share"
-                android:layout_marginEnd="@dimen/card_padding"
-                android:layout_marginTop="@dimen/card_padding"
+                android:layout_alignParentTop="true"
+                android:paddingStart="@dimen/card_padding"
                 />
 
             <TextView
                 android:id="@+id/text_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:textSize="14sp"
+                android:layout_below="@id/text_detail"
+                android:layout_toStartOf="@id/icon_menu"
+                android:textSize="12sp"
                 android:text="time and date"
                 android:textStyle="bold"
                 android:textColor="@android:color/darker_gray"
