--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings_naming.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings_naming.xml
@@ -5,11 +5,15 @@
     <string name="photo_title">emergency photo %s</string>
     <string name="photo_description">Photo taken by the Emergency Recorder, %s.</string>
 
+    <string name="video_filename">emergency_video_%s.mp4</string>
     <string name="video_title">emergency video %s</string>
     <string name="video_description">Video taken by the Emergency Recorder, %s. Contains %d frames. Duration: %d ms.</string>
 
+    <string name="hybrid_photo_filename">emergency_burst_photo_%s.jpg</string>
     <string name="hybrid_photo_title">emergency burst photo %s</string>
     <string name="hybrid_photo_description">Photo taken by the Emergency Recorder at %s, as part of a burst started at %s.</string>
+
+    <string name="hybrid_video_filename">emergency_burst_video_%s.mp4</string>
 
     <string name="audio_filename">emergency_audio_%s.jpg</string>
     <string name="audio_album">Emergency Toolkit Recorder</string>
