--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings_task_stitching_photos.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings_task_stitching_photos.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="task_title_stitching_photos">Stitching photos…</string>
-    <string name="task_content_stitching_photos">Emergency Recorder is combining your photos into a video, and storing the audio recording of your session.</string>
+    <string name="task_content_stitching_photos">Emergency Recorder is combining your photos into a video, and storing the audio recording of your session…</string>
     <string name="task_ticker_stitching_photos">Preparing your burst mode video…</string>
 
     <string name="task_update_stitching_photos">
