--- a/EmergencyRecorder/recorder.app/src/main/res/layout/entry_log.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/entry_log.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/card_padding">
+    android:paddingTop="@dimen/card_padding">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
