--- a/EmergencyRecorder/recorder.app/src/main/res/values/values_configuration.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/values_configuration.xml
@@ -6,6 +6,9 @@
     <bool name="supports_photo_mode">true</bool>
     <bool name="supports_hybrid_mode">true</bool>
 
+    <!-- listener configuration -->
+    <bool name="use_embedded_listener">false</bool>
+
     <!-- default rules -->
     <string-array name="call_matches">
         <item>UK emergency services,999,OpenBubbleCamStartVideoMode</item>
