mux audio into video, improve audit log UI with icon colours

--- a/EmergencyRecorder/recorder.app/src/main/res/values/colors.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorAOK">#00ACC1</color>
 
     <color name="colorVideo">#C43228</color>
+    <color name="colorAudio">#FF6F00</color>
     <color name="colorHybrid">#673AB7</color>
     <color name="colorPhoto">#2196F3</color>
 
