upgrade config, boot receiver, background alarms to improve background behaviours

--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings_audit.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings_audit.xml
@@ -19,6 +19,7 @@
     <string name="event_audit_intent_received">Intent received.</string>
     <string name="event_audit_intent_received_ACTION">Intent received: %s</string>
     <string name="event_audit_service_stopped">Service stopped naturally.</string>
+    <string name="event_audit_task_stopped">Task stopped.</string>
     <string name="event_audit_service_started">Service started.</string>
     <string name="event_audit_alarm_set_1_min">Alarm set for 1 minute.</string>
 
