--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings_config.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings_config.xml
@@ -37,6 +37,8 @@
     <string name="config_embedded_listener">Call receiver in Service: %s</string>
     <string name="config_hybrid_delay">Burst mode photo interval: %d ms</string>
     <string name="config_location_delay">Location interval: %d ms</string>
+    <string name="config_appcenter_analytics_enabled">AppCenter analytics enabled: %s</string>
+    <string name="config_appcenter_distribute_enabled">AppCenter distribution enabled: %s</string>
 
     <string name="btn_grant_permissions">Grant permissions…</string>
     <string name="btn_grant_overlay">Grant overlay permission…</string>
