--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings_config.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings_config.xml
@@ -33,12 +33,19 @@
 
     <string name="dialog_title_config">Configuration</string>
 
+    <!-- configuration dialog lines -->
     <string name="config_static_listener">Call receiver in manifest: %s</string>
     <string name="config_embedded_listener">Call receiver in Service: %s</string>
     <string name="config_hybrid_delay">Burst mode photo interval: %d ms</string>
     <string name="config_location_delay">Location interval: %d ms</string>
     <string name="config_appcenter_analytics_enabled">AppCenter analytics enabled: %s</string>
     <string name="config_appcenter_distribute_enabled">AppCenter distribution enabled: %s</string>
+    <string name="config_photo_mode_supported">Photos enabled: %s</string>
+    <string name="config_hybrid_mode_supported">Bursts enabled: %s</string>
+    <string name="config_video_mode_supported">Videos enabled: %s</string>
+    <string name="config_hybrid_video_max_width">Hybrid video max width: %d</string>
+    <string name="config_video_max_width">Video max width: %d</string>
+    <string name="config_video_bps">Video bitrate: %d bps</string>
 
     <string name="btn_grant_permissions">Grant permissions…</string>
     <string name="btn_grant_overlay">Grant overlay permission…</string>
