--- a/EmergencyRecorder/recorder.app/src/main/res/values/values_configuration.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/values_configuration.xml
@@ -19,6 +19,7 @@
     </string-array>
 
     <!-- hybrid processing -->
+    <integer name="default_picture_max_width">2000</integer>
     <integer name="default_hybrid_video_max_width">960</integer>
 
     <!-- video processing -->
