--- a/EmergencyRecorder/recorder.app/src/main/res/layout/activity_config.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/activity_config.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/activity_margin"
-    tools:context="org.policerewired.recorder.ui.ConfigActivity">
+    tools:context="org.policerewired.recorder.ui.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
