--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings_main.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings_main.xml
@@ -1,26 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="explanation_permissions">
-        Emergency Recorder needs a few permissions in order to be able
-        to detect your emergency call, to initiate the camera, and to
-        store the video footage you record on your phone.
-    </string>
-
-    <string name="disclaimer_permissions">
-        Emergency Recorder will never share any footage you take
-        without your consent.
-    </string>
-
-    <string name="explanation_overlay">
-        Emergency Recorder needs an extra permissions to be able to
-        use your camera on screen in a bubble.
-    </string>
-
-    <string name="explanation_power">
-        Emergency Recorder needs to run in the background to detect emergency calls.
-        Please disable Battery Optimisation for Emergency Recorder.
-    </string>
 
     <string name="dialog_title_about">About Emergency Recorder</string>
     <string name="dialog_message_about">
@@ -48,10 +28,7 @@
     <string name="config_video_max_width">Video max width: %d</string>
     <string name="config_video_bps">Video bitrate: %d bps</string>
 
-    <string name="btn_grant_permissions">Grant permissions…</string>
-    <string name="btn_grant_overlay">Grant overlay permission…</string>
-    <string name="btn_request_power">Disable battery optimisation…</string>
-
+    <string name="menu_show_new_permissions_slides">Experimental welcome screens…</string>
     <string name="menu_show_oss_licenses">Show open source licenses…</string>
     <string name="menu_view_config">View configuration…</string>
     <string name="menu_view_rules">Edit rules…</string>
