--- a/EmergencyRecorder/recorder.app/src/main/res/layout/activity_rules.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/activity_rules.xml
@@ -21,7 +21,9 @@
         android:layout_margin="@dimen/fab_margin"
         android:layout_gravity="bottom|end"
         android:src="@drawable/ic_add_black_24dp"
-        android:tint="@android:color/white"
+        app:tint="@android:color/white"
+        app:backgroundTint="@color/colorAccent"
+        app:useCompatPadding="true"
         />
 
 </FrameLayout>
